Source/WebCore/animation/WebAnimation.h
@@ -104,10 +104,10 @@ public:
     void persist();
     ExceptionOr<void> commitStyles();
 
-    virtual Optional<double> bindingsStartTime() const { return startTime(); }
+    virtual Optional<double> bindingsStartTime() const;
     virtual void setBindingsStartTime(Optional<double>);
-    Optional<double> startTime() const;
-    void setStartTime(Optional<double>);
+    Optional<Seconds> startTime() const { return m_startTime; }
+    void setStartTime(Optional<Seconds>);
     virtual Optional<double> bindingsCurrentTime() const;
     virtual ExceptionOr<void> setBindingsCurrentTime(Optional<double>);
     virtual PlayState bindingsPlayState() const { return playState(); }
